# notstuck

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  notstuck_architecture.drawio  package-lock.json  package.json  repomix-output.txt
backend/: .dockerignore  .env.example  Dockerfile  MIGRATION_GUIDE.md  PIPELINE_FLOW.md  QUICKSTART.md  README.md  bm25_values.json  config.py  fly.toml  pyproject.toml  repomix-output.txt  requirements.txt  vercel.json
backend/app/: clients.py  config.py  logging_config.py  main.py  models.py  test.py
backend/app/clients/: mongodb_client.py  nltk_setup.py  openai_client.py  openai_embeddings.py  pinecone_client.py
backend/app/core/: embedding.py  enhanced_retriever.py  greeting_handler.py  openai_client.py  pinecone_query.py  prompt_builder.py  query_classifier.py  query_llm.py  rag.py  rag_chain.py  rag_utils.py
backend/app/database/: db.py
backend/app/helpers/: chat_name_generator.py  chat_summary.py  subjects_classifier.py
backend/app/models/: configs.py  enums.py
backend/app/query_llm/: embedding.py  openai_client.py  pinecone_query.py  prompt_builder.py  rag.py
backend/app/rag/: main.py
backend/bm25_values/: bm25_values.json
backend/chroma/: chroma.sqlite3
backend/data/: economics_intro.ppt
backend/rag/: get_embedding_function.py  populate_database.py  query_data.py  test.py
backend/test_results/: parameter_test_results_20250216_005546.json  parameter_test_results_20250216_014721.json
backend/tests/: test_rag_configurations.py  test_retrieval.py
(+113 files in other folders)
