[project]
name = "notstuck-backend"
version = "1.0.0"
description = "AI-powered document assistant backend"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "pypdf",
    "openai",
    "fastapi",
    "pydantic",
    "uvicorn",
    "python-multipart",
    "pytest",
    "pytest-asyncio",
    "nltk",
    "numpy",
    "scikit-learn",
    "pinecone-text",
    "pinecone",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
